// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Case documents uploaded 1`] = `
<React.Fragment>
  <ForwardRef(render)
    margin="43px 0 0 0"
  >
    Proof of asset:
  </ForwardRef(render)>
  <React.Fragment>
    <ForwardRef(render)
      margin="15px 0 48px 0"
    >
      W2
    </ForwardRef(render)>
    <ForwardRef(render)>
      <div
        className="uploaded-document"
      >
        <div
          className="uploaded-document-type-title"
        >
          <span>
            W2
          </span>
        </div>
        <ForwardRef(render)>
          <div
            className="uploaded-document-display"
          >
            <ForwardRef(render)>
              abc.png
            </ForwardRef(render)>
            <ForwardRef(render)
              onClick={[Function]}
            >
              Remove
            </ForwardRef(render)>
          </div>
        </ForwardRef(render)>
      </div>
      <div
        className="uploaded-document"
      >
        <div
          className="uploaded-document-type-title"
        >
          <span>
            W2
          </span>
          <ForwardRef(render)
            onClick={[Function]}
          >
            Remove all (
            2
            )
          </ForwardRef(render)>
        </div>
        <ForwardRef(render)>
          <div
            className="uploaded-document-display"
          >
            <ForwardRef(render)>
              def.pdf
            </ForwardRef(render)>
            <ForwardRef(render)
              onClick={[Function]}
            >
              Remove
            </ForwardRef(render)>
          </div>
          <div
            className="uploaded-document-display"
          >
            <ForwardRef(render)>
              ghi.jpg
            </ForwardRef(render)>
            <ForwardRef(render)
              onClick={[Function]}
            >
              Remove
            </ForwardRef(render)>
          </div>
        </ForwardRef(render)>
      </div>
    </ForwardRef(render)>
    <ForwardRef(render)
      marginBottom={51}
      marginTop={48}
    >
      <div>
        <ForwardRef(WithStyles)
          classes={
            Object {
              "label": "css-1405lf9",
              "root": "css-11ldqzb",
            }
          }
          color="primary"
          component="label"
          fullWidth={true}
          variant="outlined"
        >
          Upload  W2
          <input
            accept="image/*,.pdf"
            id="1"
            max={2}
            multiple={true}
            name="1"
            onChange={[Function]}
            style={
              Object {
                "display": "none",
              }
            }
            type="file"
          />
        </ForwardRef(WithStyles)>
      </div>
    </ForwardRef(render)>
  </React.Fragment>
</React.Fragment>
`;

exports[`Case documents uploaded 1 large document 1`] = `
<React.Fragment>
  <ForwardRef(render)
    margin="43px 0 0 0"
  >
    Proof of asset:
  </ForwardRef(render)>
  <React.Fragment>
    <ForwardRef(render)
      margin="15px 0 48px 0"
    >
      W2
    </ForwardRef(render)>
    <ForwardRef(render)>
      <div
        className="uploaded-document"
      >
        <div
          className="uploaded-document-type-title"
        >
          <span>
            W2
          </span>
        </div>
        <ForwardRef(render)>
          <div
            className="uploaded-document-display"
          >
            <ForwardRef(render)>
              abc.png
            </ForwardRef(render)>
            <ForwardRef(render)
              onClick={[Function]}
            >
              Remove
            </ForwardRef(render)>
          </div>
        </ForwardRef(render)>
      </div>
      <div
        className="uploaded-document"
      >
        <div
          className="uploaded-document-type-title"
        >
          <span>
            W2
          </span>
          <ForwardRef(render)
            onClick={[Function]}
          >
            Remove all (
            2
            )
          </ForwardRef(render)>
        </div>
        <ForwardRef(render)>
          <div
            className="uploaded-document-display"
          >
            <ForwardRef(render)>
              def.pdf
            </ForwardRef(render)>
            <ForwardRef(render)
              onClick={[Function]}
            >
              Remove
            </ForwardRef(render)>
          </div>
          <div
            className="uploaded-document-display"
          >
            <ForwardRef(render)>
              ghi.jpg
            </ForwardRef(render)>
            <ForwardRef(render)
              onClick={[Function]}
            >
              Remove
            </ForwardRef(render)>
          </div>
        </ForwardRef(render)>
      </div>
    </ForwardRef(render)>
    <ForwardRef(render)
      marginBottom={51}
      marginTop={48}
    >
      <div>
        <ForwardRef(WithStyles)
          classes={
            Object {
              "label": "css-1405lf9",
              "root": "css-11ldqzb",
            }
          }
          color="primary"
          component="label"
          fullWidth={true}
          variant="outlined"
        >
          Upload  W2
          <input
            accept="image/*,.pdf"
            id="1"
            max={2}
            multiple={true}
            name="1"
            onChange={[Function]}
            style={
              Object {
                "display": "none",
              }
            }
            type="file"
          />
        </ForwardRef(WithStyles)>
      </div>
    </ForwardRef(render)>
  </React.Fragment>
</React.Fragment>
`;

exports[`Case documents uploaded 2`] = `
<React.Fragment>
  <ForwardRef(render)
    margin="43px 0 0 0"
  >
    Proof of asset:
  </ForwardRef(render)>
  <React.Fragment>
    <ForwardRef(render)
      margin="15px 0 48px 0"
    >
      W2
    </ForwardRef(render)>
    <ForwardRef(render)>
      <div
        className="uploaded-document"
      >
        <div
          className="uploaded-document-type-title"
        >
          <span>
            W2
          </span>
        </div>
        <ForwardRef(render)>
          <div
            className="uploaded-document-display"
          >
            <ForwardRef(render)>
              abc.png
            </ForwardRef(render)>
            <ForwardRef(render)
              onClick={[Function]}
            >
              Remove
            </ForwardRef(render)>
          </div>
        </ForwardRef(render)>
      </div>
      <div
        className="uploaded-document"
      >
        <div
          className="uploaded-document-type-title"
        >
          <span>
            W2
          </span>
          <ForwardRef(render)
            onClick={[Function]}
          >
            Remove all (
            2
            )
          </ForwardRef(render)>
        </div>
        <ForwardRef(render)>
          <div
            className="uploaded-document-display"
          >
            <ForwardRef(render)>
              def.pdf
            </ForwardRef(render)>
            <ForwardRef(render)
              onClick={[Function]}
            >
              Remove
            </ForwardRef(render)>
          </div>
          <div
            className="uploaded-document-display"
          >
            <ForwardRef(render)>
              ghi.jpg
            </ForwardRef(render)>
            <ForwardRef(render)
              onClick={[Function]}
            >
              Remove
            </ForwardRef(render)>
          </div>
        </ForwardRef(render)>
      </div>
    </ForwardRef(render)>
    <ForwardRef(render)
      marginBottom={51}
      marginTop={48}
    >
      <div>
        <ForwardRef(WithStyles)
          classes={
            Object {
              "label": "css-1405lf9",
              "root": "css-11ldqzb",
            }
          }
          color="primary"
          component="label"
          fullWidth={true}
          variant="outlined"
        >
          Upload  W2
          <input
            accept="image/*,.pdf"
            id="1"
            max={2}
            multiple={true}
            name="1"
            onChange={[Function]}
            style={
              Object {
                "display": "none",
              }
            }
            type="file"
          />
        </ForwardRef(WithStyles)>
      </div>
    </ForwardRef(render)>
  </React.Fragment>
</React.Fragment>
`;

exports[`Case documents uploaded 2 large document 1`] = `
<React.Fragment>
  <ForwardRef(render)
    margin="43px 0 0 0"
  >
    Proof of asset:
  </ForwardRef(render)>
  <React.Fragment>
    <ForwardRef(render)
      margin="15px 0 48px 0"
    >
      W2
    </ForwardRef(render)>
    <ForwardRef(render)>
      <div
        className="uploaded-document"
      >
        <div
          className="uploaded-document-type-title"
        >
          <span>
            W2
          </span>
        </div>
        <ForwardRef(render)>
          <div
            className="uploaded-document-display"
          >
            <ForwardRef(render)>
              abc.png
            </ForwardRef(render)>
            <ForwardRef(render)
              onClick={[Function]}
            >
              Remove
            </ForwardRef(render)>
          </div>
        </ForwardRef(render)>
      </div>
      <div
        className="uploaded-document"
      >
        <div
          className="uploaded-document-type-title"
        >
          <span>
            W2
          </span>
          <ForwardRef(render)
            onClick={[Function]}
          >
            Remove all (
            2
            )
          </ForwardRef(render)>
        </div>
        <ForwardRef(render)>
          <div
            className="uploaded-document-display"
          >
            <ForwardRef(render)>
              def.pdf
            </ForwardRef(render)>
            <ForwardRef(render)
              onClick={[Function]}
            >
              Remove
            </ForwardRef(render)>
          </div>
          <div
            className="uploaded-document-display"
          >
            <ForwardRef(render)>
              ghi.jpg
            </ForwardRef(render)>
            <ForwardRef(render)
              onClick={[Function]}
            >
              Remove
            </ForwardRef(render)>
          </div>
        </ForwardRef(render)>
      </div>
    </ForwardRef(render)>
    <ForwardRef(render)
      marginBottom={51}
      marginTop={48}
    >
      <div>
        <ForwardRef(WithStyles)
          classes={
            Object {
              "label": "css-1405lf9",
              "root": "css-11ldqzb",
            }
          }
          color="primary"
          component="label"
          fullWidth={true}
          variant="outlined"
        >
          Upload  W2
          <input
            accept="image/*,.pdf"
            id="1"
            max={2}
            multiple={true}
            name="1"
            onChange={[Function]}
            style={
              Object {
                "display": "none",
              }
            }
            type="file"
          />
        </ForwardRef(WithStyles)>
      </div>
    </ForwardRef(render)>
  </React.Fragment>
</React.Fragment>
`;

exports[`Case multiple required document (require all) 1`] = `
<React.Fragment>
  <ForwardRef(render)
    margin="43px 0 0 0"
  >
    Proof of income:
  </ForwardRef(render)>
  <React.Fragment>
    <ForwardRef(render)
      margin="15px 0 48px 0"
    >
      W2 + 1099 Form
    </ForwardRef(render)>
    <ForwardRef(render) />
    <ForwardRef(render)
      marginBottom={51}
      marginTop={48}
    >
      <div>
        <ForwardRef(WithStyles)
          classes={
            Object {
              "label": "css-1405lf9",
              "root": "css-11ldqzb",
            }
          }
          color="primary"
          component="label"
          fullWidth={true}
          variant="outlined"
        >
          Upload 1 W2
          <input
            accept="image/*,.pdf"
            id="1"
            max={3}
            multiple={true}
            name="1"
            onChange={[Function]}
            style={
              Object {
                "display": "none",
              }
            }
            type="file"
          />
        </ForwardRef(WithStyles)>
      </div>
      <div>
        <ForwardRef(WithStyles)
          classes={
            Object {
              "label": "css-1405lf9",
              "root": "css-11ldqzb",
            }
          }
          color="primary"
          component="label"
          fullWidth={true}
          variant="outlined"
        >
          Upload 1 1099 Form
          <input
            accept="image/*,.pdf"
            id="2"
            max={1}
            multiple={true}
            name="2"
            onChange={[Function]}
            style={
              Object {
                "display": "none",
              }
            }
            type="file"
          />
        </ForwardRef(WithStyles)>
      </div>
    </ForwardRef(render)>
  </React.Fragment>
</React.Fragment>
`;

exports[`Case no uploaded documents 1`] = `
<React.Fragment>
  <ForwardRef(render)
    margin="43px 0 0 0"
  >
    Proof of asset:
  </ForwardRef(render)>
  <React.Fragment>
    <ForwardRef(render)
      margin="15px 0 48px 0"
    >
      W2
    </ForwardRef(render)>
    <ForwardRef(render) />
    <ForwardRef(render)
      marginBottom={51}
      marginTop={48}
    >
      <div>
        <ForwardRef(WithStyles)
          classes={
            Object {
              "label": "css-1405lf9",
              "root": "css-11ldqzb",
            }
          }
          color="primary"
          component="label"
          fullWidth={true}
          variant="outlined"
        >
          Upload 1 W2
          <input
            accept="image/*,.pdf"
            id="1"
            max={3}
            multiple={true}
            name="1"
            onChange={[Function]}
            style={
              Object {
                "display": "none",
              }
            }
            type="file"
          />
        </ForwardRef(WithStyles)>
      </div>
    </ForwardRef(render)>
  </React.Fragment>
</React.Fragment>
`;

exports[`Case only one required document 1`] = `
<React.Fragment>
  <ForwardRef(render)
    margin="43px 0 0 0"
  >
    Proof of income:
  </ForwardRef(render)>
  <React.Fragment>
    <ForwardRef(render)
      margin="15px 0 48px 0"
    >
      W2
    </ForwardRef(render)>
    <ForwardRef(render) />
    <ForwardRef(render)
      marginBottom={51}
      marginTop={48}
    >
      <div>
        <ForwardRef(WithStyles)
          classes={
            Object {
              "label": "css-1405lf9",
              "root": "css-11ldqzb",
            }
          }
          color="primary"
          component="label"
          fullWidth={true}
          variant="outlined"
        >
          Upload 1 W2
          <input
            accept="image/*,.pdf"
            id="1"
            max={3}
            multiple={true}
            name="1"
            onChange={[Function]}
            style={
              Object {
                "display": "none",
              }
            }
            type="file"
          />
        </ForwardRef(WithStyles)>
      </div>
    </ForwardRef(render)>
  </React.Fragment>
</React.Fragment>
`;

exports[`Case require one of multiple document 1`] = `
<React.Fragment>
  <ForwardRef(render)
    margin="43px 0 0 0"
  >
    Proof of income:
  </ForwardRef(render)>
  <React.Fragment>
    <ForwardRef(WithStyles)
      component="fieldset"
    >
      <ForwardRef(RadioGroup)
        aria-label="documents"
        name="documents"
        onChange={[Function]}
        value={null}
      >
        <ForwardRef(WithStyles)
          control={<ForwardRef(WithStyles) />}
          disabled={false}
          id="radioButton2"
          label="1099 Form"
          value={0}
        />
        <ForwardRef(WithStyles)
          control={<ForwardRef(WithStyles) />}
          disabled={false}
          id="radioButton3"
          label="3 Paystubs"
          value={1}
        />
      </ForwardRef(RadioGroup)>
    </ForwardRef(WithStyles)>
  </React.Fragment>
</React.Fragment>
`;
